Update Configuration system Optimization and refactoring code Update supported minecraft version to 1.21