@@ -1,6 +1,7 @@
 package ru.merkii.rduels.core.sign.listener;
 
-import org.bukkit.Bukkit;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
 import org.bukkit.block.Block;
 import org.bukkit.block.Sign;
 import org.bukkit.entity.Player;
@@ -10,35 +11,49 @@ import org.bukkit.event.block.Action;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.event.player.PlayerKickEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
-import ru.merkii.rduels.RDuels;
-import ru.merkii.rduels.config.messages.MessageConfiguration;
-import ru.merkii.rduels.core.arena.ArenaCore;
+import ru.merkii.rduels.adapter.DuelPlayer;
+import ru.merkii.rduels.adapter.bukkit.BukkitAdapter;
+import ru.merkii.rduels.config.Placeholder;
+import ru.merkii.rduels.config.messages.MessageConfig;
+import ru.merkii.rduels.core.arena.api.ArenaAPI;
 import ru.merkii.rduels.core.arena.model.ArenaModel;
-import ru.merkii.rduels.core.customkit.CustomKitCore;
-import ru.merkii.rduels.core.duel.DuelCore;
+import ru.merkii.rduels.core.customkit.api.CustomKitAPI;
+import ru.merkii.rduels.core.duel.api.DuelAPI;
 import ru.merkii.rduels.core.duel.model.DuelKitType;
 import ru.merkii.rduels.core.duel.model.DuelRequest;
-import ru.merkii.rduels.core.party.PartyCore;
 import ru.merkii.rduels.core.party.api.PartyAPI;
 import ru.merkii.rduels.core.party.model.PartyModel;
-import ru.merkii.rduels.core.sign.SignCore;
 import ru.merkii.rduels.core.sign.api.SignAPI;
 import ru.merkii.rduels.core.sign.event.SignClickEvent;
-import ru.merkii.rduels.core.sign.model.SignModel;
 import ru.merkii.rduels.core.sign.model.SignQueueModel;
+import ru.merkii.rduels.core.sign.model.SignModel;
 import ru.merkii.rduels.core.sign.util.SignUtil;
 import ru.merkii.rduels.model.BlockPosition;
 import ru.merkii.rduels.model.KitModel;
 import ru.merkii.rduels.util.ColorUtil;
-import ru.merkii.rduels.util.PlayerUtil;
-import java.util.Objects;
+
+import java.util.Arrays;
 import java.util.Optional;
 
+@Singleton
 public class SignListener implements Listener {
 
-    private final SignAPI signAPI = SignCore.INSTANCE.getSignAPI();
-    private final PartyAPI partyAPI = PartyCore.INSTANCE.getPartyAPI();
-    private final MessageConfiguration messageConfiguration = RDuels.getInstance().getPluginMessage();
+    private final SignAPI signAPI;
+    private final PartyAPI partyAPI;
+    private final MessageConfig messageConfig;
+    private final DuelAPI duelAPI;
+    private final ArenaAPI arenaAPI;
+    private final CustomKitAPI customKitAPI;
+
+    @Inject
+    public SignListener(SignAPI signAPI, PartyAPI partyAPI, MessageConfig messageConfig, DuelAPI duelAPI, ArenaAPI arenaAPI, CustomKitAPI customKitAPI) {
+        this.signAPI = signAPI;
+        this.partyAPI = partyAPI;
+        this.messageConfig = messageConfig;
+        this.duelAPI = duelAPI;
+        this.arenaAPI = arenaAPI;
+        this.customKitAPI = customKitAPI;
+    }
 
     @EventHandler
     public void onInteract(PlayerInteractEvent event) {
@@ -56,7 +71,8 @@ public class SignListener implements Listener {
     @EventHandler
     public void onSignClick(SignClickEvent event) {
         SignModel signModel = event.getSignModel();
-        Player player = event.getPlayer();
+        Player bukkitPlayer = event.getPlayer();
+        DuelPlayer player = BukkitAdapter.adapt(bukkitPlayer);
         Sign sign = event.getSign();
         PartyModel partyModel = this.partyAPI.getPartyModelFromPlayer(player);
         if (this.signAPI.isFightSign(signModel)) {
@@ -67,7 +83,6 @@ public class SignListener implements Listener {
             return;
         }
         if (this.signAPI.isQueuePlayer(player)) {
-            player.sendMessage(this.messageConfiguration.getMessage("queueAlready"));
             return;
         }
         SignQueueModel signQueueModel = this.signAPI.getQueueInSignModel(signModel);
@@ -89,13 +104,13 @@ public class SignListener implements Listener {
         handleFourSign(signQueueModel, signModel, sign, player);
     }
 
-    private void handleFourSign(SignQueueModel signQueueModel, SignModel signModel, Sign sign, Player player) {
+    private void handleFourSign(SignQueueModel signQueueModel, SignModel signModel, Sign sign, DuelPlayer player) {
         if (signQueueModel.getSender() == null) {
             if (signModel.getDuelKit() == DuelKitType.CUSTOM) {
-                signModel.setKitModel(CustomKitCore.INSTANCE.getCustomKitAPI().getKitModel(player));
+                signModel.setKitModel(customKitAPI.getKitModel(player));
                 if (signModel.getKitModel().getDisplayName().equalsIgnoreCase("null")) {
                     signModel.setKitModel(null);
-                    player.sendMessage(RDuels.getInstance().getPluginMessage().getMessage("signNoStart"));
+                    messageConfig.sendTo(player, "sign-no-start");
                     return;
                 }
             }
@@ -106,7 +121,7 @@ public class SignListener implements Listener {
                 return;
             }
             this.signAPI.setSignWait(sign, size, signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
-            player.sendMessage(this.messageConfiguration.getMessage("signStartQueue").replace("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())));
+            messageConfig.sendTo(player, Placeholder.wrapped("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())), "sign-start-queue");
             return;
         }
         if (signQueueModel.getSenderHelper() == null) {
@@ -133,7 +148,7 @@ public class SignListener implements Listener {
         this.startFightFour(sign, signQueueModel, signModel);
     }
 
-    private void handleParty(SignQueueModel signQueueModel, PartyModel partyModel, SignModel signModel, Sign sign, Player player) {
+    private void handleParty(SignQueueModel signQueueModel, PartyModel partyModel, SignModel signModel, Sign sign, DuelPlayer player) {
         if (this.getSizeQueue(signQueueModel) == 3) {
             return;
         }
@@ -142,57 +157,57 @@ public class SignListener implements Listener {
         }
         if (signQueueModel.getSender() == null && signQueueModel.getSenderHelper() == null) {
             signQueueModel.setSender(player);
-            signQueueModel.setSenderHelper(Bukkit.getPlayer(partyModel.getPlayers().get(0)));
+            signQueueModel.setSenderHelper(BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst()));
             if (signQueueModel.getReceiver() != null && signQueueModel.getReceiverHelper() != null) {
                 this.startFightFour(sign, signQueueModel, signModel);
                 return;
             }
             this.signAPI.setSignWait(sign, this.getSizeQueue(signQueueModel), signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
-            player.sendMessage(this.messageConfiguration.getMessage("signStartQueue").replace("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())));
+            messageConfig.sendTo(player, Placeholder.wrapped("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())), "sign-start-queue");
             return;
         }
         if (signQueueModel.getReceiver() == null && signQueueModel.getReceiverHelper() == null) {
             signQueueModel.setReceiver(player);
-            signQueueModel.setReceiverHelper(Bukkit.getPlayer(partyModel.getPlayers().get(0)));
+            signQueueModel.setReceiverHelper(BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst()));
             if (signQueueModel.getSender() != null && signQueueModel.getSenderHelper() != null) {
                 this.startFightFour(sign, signQueueModel, signModel);
                 return;
             }
             this.signAPI.setSignWait(sign, this.getSizeQueue(signQueueModel), signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
-            player.sendMessage(this.messageConfiguration.getMessage("signStartQueue").replace("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())));
+            messageConfig.sendTo(player, Placeholder.wrapped("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())), "sign-start-queue");
         }
     }
 
-    private void handleEmptyQueueSign(PartyModel partyModel, SignModel signModel, Sign sign, Player player) {
+    private void handleEmptyQueueSign(PartyModel partyModel, SignModel signModel, Sign sign, DuelPlayer player) {
         if (partyModel != null) {
             this.onParty(partyModel, player, signModel, sign);
             return;
         }
         if (signModel.getDuelKit() == DuelKitType.CUSTOM) {
-            signModel.setKitModel(CustomKitCore.INSTANCE.getCustomKitAPI().getKitModel(player));
+            signModel.setKitModel(customKitAPI.getKitModel(player));
             if (signModel.getKitModel().getDisplayName().equalsIgnoreCase("null")) {
                 signModel.setKitModel(null);
-                player.sendMessage(RDuels.getInstance().getPluginMessage().getMessage("signNoStart"));
+                messageConfig.sendTo(player, "sign-no-start");
                 return;
             }
         }
         this.signAPI.addQueueSign(SignQueueModel.create(signModel, player));
         this.signAPI.setSignWait(sign, 1, signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel().getDisplayName());
-        player.sendMessage(this.messageConfiguration.getMessage("signStartQueue").replace("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())));
+        messageConfig.sendTo(player, Placeholder.wrapped("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())), "sign-start-queue");
     }
 
-    private void handleQueueSign(SignModel signModel, PartyModel partyModel, Sign sign, Player player) {
+    private void handleQueueSign(SignModel signModel, PartyModel partyModel, Sign sign, DuelPlayer player) {
         SignQueueModel signQueueModel = this.signAPI.getQueueInSignModel(signModel);
         if (signQueueModel == null) {
             return;
         }
         if (signModel.getDuelType().getSize() == 4) {
             if (partyModel != null) {
-                if (!partyModel.getOwner().equals(player.getUniqueId())) {
+                if (!partyModel.getOwner().equals(player.getUUID())) {
                     return;
                 }
                 this.setPlayerQueue(signQueueModel, player, null);
-                this.setPlayerQueue(signQueueModel, Objects.requireNonNull(Bukkit.getPlayer(partyModel.getPlayers().get(0))), null);
+                this.setPlayerQueue(signQueueModel, BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst()), null);
                 this.signAPI.setSignWait(sign, this.getSizeQueue(signQueueModel), signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
                 return;
             }
@@ -208,9 +223,9 @@ public class SignListener implements Listener {
         this.signAPI.setSignWait(sign, 0, signModel.getDuelType().getSize(), signModel.getDuelKit(), "");
     }
 
-    private void onParty(PartyModel partyModel, Player player, SignModel signModel, Sign sign) {
-        if (!partyModel.getOwner().equals(player.getUniqueId())) {
-            player.sendMessage(this.messageConfiguration.getMessage("partyNoOwner"));
+    private void onParty(PartyModel partyModel, DuelPlayer player, SignModel signModel, Sign sign) {
+        if (!partyModel.getOwner().equals(player.getUUID())) {
+            messageConfig.sendTo(player, "party-no-owner");
             return;
         }
         if (signModel.getDuelType().getSize() == 2) {
@@ -218,43 +233,49 @@ public class SignListener implements Listener {
                 return;
             }
             if (signModel.getDuelKit() == DuelKitType.CUSTOM) {
-                signModel.setKitModel(CustomKitCore.INSTANCE.getCustomKitAPI().getKitModel(player));
+                signModel.setKitModel(customKitAPI.getKitModel(player));
                 if (signModel.getKitModel().getDisplayName().equalsIgnoreCase("null")) {
                     signModel.setKitModel(null);
-                    player.sendMessage(RDuels.getInstance().getPluginMessage().getMessage("signNoStart"));
+                    messageConfig.sendTo(player, "sign-no-start");
                     return;
                 }
             }
-            this.startFight(signModel, sign, player, Bukkit.getPlayer(partyModel.getPlayers().get(0)), false);
+            this.startFight(signModel, sign, player, BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst()), false);
             return;
         }
         if (signModel.getDuelType().getSize() == 4) {
             if (partyModel.getPlayers().size() == 1) {
                 if (signModel.getDuelKit() == DuelKitType.CUSTOM) {
-                    signModel.setKitModel(CustomKitCore.INSTANCE.getCustomKitAPI().getKitModel(player));
+                    signModel.setKitModel(customKitAPI.getKitModel(player));
                     if (signModel.getKitModel().getDisplayName().equalsIgnoreCase("null")) {
                         signModel.setKitModel(null);
-                        player.sendMessage(RDuels.getInstance().getPluginMessage().getMessage("signNoStart"));
+                        messageConfig.sendTo(player, "sign-no-start");
                         return;
                     }
                 }
-                this.signAPI.addQueueSign(SignQueueModel.builder().signModel(signModel).sender(player).senderHelper(Bukkit.getPlayer(partyModel.getPlayers().get(0))).build());
+                this.signAPI.addQueueSign(SignQueueModel.builder().signModel(signModel).sender(player).senderHelper(BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst())).build());
                 this.signAPI.setSignWait(sign, 2, 4, signModel.getDuelKit(), signModel.getKitModel().getDisplayName());
-                player.sendMessage(this.messageConfiguration.getMessage("signStartQueue").replace("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())));
+                messageConfig.sendTo(player, Placeholder.wrapped("(kit)", ColorUtil.color(signModel.getKitModel().getDisplayName())), "sign-start-queue");
                 return;
             }
             if (partyModel.getPlayers().size() != 3) {
                 return;
             }
             if (signModel.getDuelKit() == DuelKitType.CUSTOM) {
-                signModel.setKitModel(CustomKitCore.INSTANCE.getCustomKitAPI().getKitModel(player));
+                signModel.setKitModel(customKitAPI.getKitModel(player));
                 if (signModel.getKitModel().getDisplayName().equalsIgnoreCase("null")) {
                     signModel.setKitModel(null);
-                    player.sendMessage(RDuels.getInstance().getPluginMessage().getMessage("signNoStart"));
+                    messageConfig.sendTo(player, "sign-no-start");
                     return;
                 }
             }
-            SignQueueModel signQueue = SignQueueModel.builder().signModel(signModel).sender(player).senderHelper(Bukkit.getPlayer(partyModel.getPlayers().get(0))).receiver(Bukkit.getPlayer(partyModel.getPlayers().get(1))).receiverHelper(Bukkit.getPlayer(partyModel.getPlayers().get(2))).build();
+            SignQueueModel signQueue = SignQueueModel.builder()
+                    .signModel(signModel)
+                    .sender(player)
+                    .senderHelper(BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst()))
+                    .receiver(BukkitAdapter.getPlayer(partyModel.getPlayers().get(1)))
+                    .receiverHelper(BukkitAdapter.getPlayer(partyModel.getPlayers().get(2)))
+                    .build();
             this.startFightFour(sign, signQueue, signModel);
         }
     }
@@ -268,20 +289,20 @@ public class SignListener implements Listener {
         duelRequest.setSignModel(signModel);
         ArenaModel arenaModel = null;
         if (signModel.getKitModel().isBindingArena()) {
-            if (signModel.getKitModel() != null && !ArenaCore.INSTANCE.getArenaAPI().getArenaFromKit(signModel.getKitModel()).isPresent()) {
+            if (arenaAPI.getArenaFromKit(signModel.getKitModel()).isEmpty()) {
                 SignUtil.clearSignsLines(sign);
                 this.signAPI.setSignWait(sign, 0, signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
                 this.signAPI.removePlayerQueueSign(signQueueModel.getSender(), signQueueModel.getSenderHelper(), signQueueModel.getReceiver(), signQueueModel.getReceiverHelper());
-                PlayerUtil.sendMessage(this.messageConfiguration.getMessage("duelArenasFull"), signQueueModel.getSender(), signQueueModel.getSenderHelper(), signQueueModel.getReceiver(), signQueueModel.getReceiverHelper());
+                messageConfig.sendTo(Arrays.asList(signQueueModel.getSender(), signQueueModel.getSenderHelper(), signQueueModel.getReceiver(), signQueueModel.getReceiverHelper()), "duel-arenas-full");
                 return;
             }
         } else {
-            arenaModel = DuelCore.INSTANCE.getDuelAPI().getFreeArenaFFA();
+            arenaModel = arenaAPI.getFreeArenaFFA();
         }
         duelRequest.setArena(arenaModel);
         this.signAPI.setSignActive(sign, signQueueModel.getSender(), signQueueModel.getReceiver(), signModel.getDuelKit());
         this.signAPI.addSignFight(signModel);
-        DuelCore.INSTANCE.getDuelAPI().startFightFour(signQueueModel.getSender(), signQueueModel.getSenderHelper(), signQueueModel.getReceiver(), signQueueModel.getReceiverHelper(), duelRequest);
+        duelAPI.startFightFour(signQueueModel.getSender(), signQueueModel.getSenderHelper(), signQueueModel.getReceiver(), signQueueModel.getReceiverHelper(), duelRequest);
     }
 
     private int getSizeQueue(SignQueueModel signQueueModel) {
@@ -301,22 +322,22 @@ public class SignListener implements Listener {
         return size;
     }
 
-    public void setPlayerQueue(SignQueueModel signQueueModel, Player player, Player set) {
-        if (signQueueModel.getSender() != null && signQueueModel.getSender().getUniqueId().equals(player.getUniqueId())) {
+    public void setPlayerQueue(SignQueueModel signQueueModel, DuelPlayer player, DuelPlayer set) {
+        if (signQueueModel.getSender() != null && signQueueModel.getSender().getUUID().equals(player.getUUID())) {
             signQueueModel.setSender(set);
             if (signQueueModel.getSignModel().getDuelKit() == DuelKitType.CUSTOM) {
                 signQueueModel.getSignModel().setKitModel(null);
             }
-        } else if (signQueueModel.getReceiver() != null && signQueueModel.getReceiver().getUniqueId().equals(player.getUniqueId())) {
+        } else if (signQueueModel.getReceiver() != null && signQueueModel.getReceiver().getUUID().equals(player.getUUID())) {
             signQueueModel.setReceiver(set);
-        } else if (signQueueModel.getReceiverHelper() != null && signQueueModel.getReceiverHelper().getUniqueId().equals(player.getUniqueId())) {
+        } else if (signQueueModel.getReceiverHelper() != null && signQueueModel.getReceiverHelper().getUUID().equals(player.getUUID())) {
             signQueueModel.setReceiverHelper(set);
         } else {
             signQueueModel.setSenderHelper(set);
         }
     }
 
-    public void startFight(SignModel signModel, Sign sign, Player sender, Player receiver, boolean ffa) {
+    public void startFight(SignModel signModel, Sign sign, DuelPlayer sender, DuelPlayer receiver, boolean ffa) {
         DuelRequest duelRequest = DuelRequest.create(sender, receiver);
         duelRequest.setDuelKit(signModel.getDuelKit());
         duelRequest.setNumGames(1);
@@ -325,20 +346,20 @@ public class SignListener implements Listener {
         duelRequest.setSignModel(signModel);
         ArenaModel arenaModel = null;
         if (signModel.getKitModel().isBindingArena()) {
-            if (signModel.getKitModel() != null && !ArenaCore.INSTANCE.getArenaAPI().getArenaFromKit(signModel.getKitModel()).isPresent()) {
+            if (arenaAPI.getArenaFromKit(signModel.getKitModel()).isEmpty()) {
                 SignUtil.clearSignsLines(sign);
                 this.signAPI.setSignWait(sign, 0, signModel.getDuelType().getSize(), signModel.getDuelKit(), signModel.getKitModel() == null ? "" : signModel.getKitModel().getDisplayName());
                 this.signAPI.removePlayerQueueSign(sender, receiver);
-                PlayerUtil.sendMessage(this.messageConfiguration.getMessage("duelArenasFull"), sender, receiver);
+                messageConfig.sendTo(Arrays.asList(sender, receiver), "duel-arenas-full");
                 return;
             }
         } else {
-            arenaModel = DuelCore.INSTANCE.getDuelAPI().getFreeArena();
+            arenaModel = arenaAPI.getFreeArena();
         }
         duelRequest.setArena(arenaModel);
         this.signAPI.setSignActive(sign, sender, receiver, signModel.getDuelKit());
         this.signAPI.addSignFight(signModel);
-        DuelCore.INSTANCE.getDuelAPI().startFight(duelRequest);
+        duelAPI.startFight(duelRequest);
     }
 
     @EventHandler
@@ -351,20 +372,25 @@ public class SignListener implements Listener {
         this.onLeave(event.getPlayer());
     }
 
-    private void onLeave(Player player) {
+    private void onLeave(Player bukkitPlayer) {
+        DuelPlayer player = BukkitAdapter.adapt(bukkitPlayer);
         if (!this.signAPI.isQueuePlayer(player)) {
             return;
         }
         this.signAPI.getQueueFromPlayer(player).ifPresent(signQueueModel -> {
-            Player player2;
+            DuelPlayer player2;
             PartyModel partyModel;
             this.setPlayerQueue(signQueueModel, player, null);
-            if (this.partyAPI.isPartyPlayer(player) && (partyModel = this.partyAPI.getPartyModelFromPlayer(player)) != null && partyModel.getOwner().equals(player.getUniqueId()) && !partyModel.getPlayers().isEmpty() && (player2 = Bukkit.getPlayer(partyModel.getPlayers().get(0))) != null) {
+            if (this.partyAPI.isPartyPlayer(player) && (partyModel = this.partyAPI.getPartyModelFromPlayer(player)) != null && partyModel.getOwner().equals(player.getUUID()) && !partyModel.getPlayers().isEmpty()) {
+                player2 = BukkitAdapter.getPlayer(partyModel.getPlayers().getFirst());
                 this.setPlayerQueue(signQueueModel, player2, null);
             }
-            Sign sign = (Sign) player.getWorld().getBlockAt(signQueueModel.getSignModel().getBlockPosition().toLocation()).getState();
+            Sign sign = (Sign) bukkitPlayer.getWorld().getBlockAt(signQueueModel.getSignModel().getBlockPosition().toLocation()).getState();
             KitModel kitModel = signQueueModel.getSignModel().getKitModel();
-            this.signAPI.setSignWait(sign, this.getSizeQueue(signQueueModel), signQueueModel.getSignModel().getDuelType().getSize(), signQueueModel.getSignModel().getDuelKit(), kitModel != null ? this.messageConfiguration.getMessage("signServerReplacer").replace("(kit)", kitModel.getDisplayName()) : this.messageConfiguration.getMessage("signCustomReplacer"));
+            String kitParam = kitModel != null
+                    ? messageConfig.plainMessage("sign-server-replacer").replace("(kit)", kitModel.getDisplayName())
+                    : messageConfig.plainMessage("sign-custom-replacer");
+            this.signAPI.setSignWait(sign, this.getSizeQueue(signQueueModel), signQueueModel.getSignModel().getDuelType().getSize(), signQueueModel.getSignModel().getDuelKit(), kitParam);
         });
     }
 
